aggiunto responsive alle varie grandezze

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 h2{
   font-size: 34px;
-  margin-bottom: 40px;
+  margin: 50px 0;
 }
 
 h3{
@@ -9,6 +9,10 @@ h3{
 
 p{
   margin: 10px 0;
+}
+
+body{
+  background: linear-gradient(to right, #ffffcc 22%, #ccffff 100%);
 }
 
 .container{
@@ -21,7 +25,7 @@ p{
 }
 
 .img-foot{
-  height: 300px;
+  height: 250px;
   margin-top: 30px;
   padding: 30px;
   border-radius: 50%;
@@ -30,4 +34,36 @@ p{
 
 .space{
   padding: 20px;
+}
+
+/* responsive */
+@media screen and (max-width:767px){
+
+  h2{
+    font-size: 32px;
+  }
+
+  h3{
+    font-size: 28px;
+  }
+
+  body{
+    background: linear-gradient(to top right, #6699ff 0%, #ff99ff 100%);
+    color: white;
+  }
+
+  hr{
+    display: none;
+  }
+}
+
+@media screen and (min-width:768px) and (max-width:991px){
+
+  body{
+    background: linear-gradient(to top right, #66ffcc 0%, #993399 100%);
+  }
+
+  hr{
+    display: none;
+  }
 }
