--- a/css/12bool.css
+++ b/css/12bool.css
@@ -183,7 +183,7 @@
 }
 
 /* tablet */
-@media screen (min-width:768px) and (max-width:991px){
+@media screen and (min-width:768px) and (max-width:991px){
   .col-md-1{
     width:calc( (100% / 12) * 1 );
   }
